# fsake

./: CMakeLists.txt  NOTES.md  README.md  TODO.md
include/: block.h  disk.h  file.h  inode.h
src/: CMakeLists.txt  disk.c  file.c  inode.c
tests/: CMakeLists.txt  test_disk.h  test_inode.h  test_main.c  test_utils.h
